# fossil-headers-db

./: .env.example  .env.production  .env.test  .gitignore  AGENT_RULES.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.indexer  Dockerfile.migrate  Makefile  README.md  RUST_GUIDELINES_PLAN.md  clippy.toml  docker-compose.local.yml  docker-compose.mainnet.yml  docker-compose.sepolia.yml  docker-compose.test.yml  lcov.info  run-coverage.sh  run-test.sh  tarpaulin-report.html
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-indexer.yaml
build-scripts/: run-coverage.sh  run-test.sh
docker/: Dockerfile  Dockerfile.indexer  Dockerfile.migrate  docker-compose.local.yml
migrations/: 20250306233500_add_request_hash_field.down.sql  20250306233500_add_request_hash_field.up.sql  20250805093704_add_requests_hash_column.down.sql  20250805093704_add_requests_hash_column.up.sql
scripts/: run-coverage.sh
src/: error_tests.rs  errors.rs  lib.rs  main.rs  mocks.rs  property_tests.rs  test_utils.rs  types.rs  utils.rs
src/commands/: mod.rs  tests.rs
src/db/: db.rs  mod.rs  tests.rs
src/db/sql/: index_metadata_table.sql
src/endpoints/: mod.rs
src/fossil_mmr/: mod.rs
src/indexer/: batch_service.rs  lib.rs  main.rs  mod.rs  quick_service.rs  service_batch.rs  service_quick.rs  test_utils.rs
src/models/: indexer_metadata.rs  mod.rs  model.rs
src/repositories/: block_header.rs  index_metadata.rs  indexer_metadata.rs  mod.rs  repository.rs  utils.rs
src/router/: handlers.rs  mod.rs
src/rpc/: mod.rs  tests.rs
src/types/: mod.rs
tests/: README.md  test_batch_indexer.rs  test_indexer.rs  test_utils.rs
tests/fixtures/: eth_getBlockByNumber_sepolia_7836330.json  eth_getBlockByNumber_sepolia_7836331.json
