[package]
name = "fossil_headers_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
axum = { version = "0.7.9", features = ["macros"] }
clap = { version = "4.5.31", features = ["derive"] }
ctrlc = "3.4.5"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "tls-rustls",
    "macros",
] }
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
eyre = "0.6.12"
once_cell = "1.20.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.140"

[dev-dependencies]
serial_test = "3.2.0"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }

[[bin]]
name = "fossil_indexer"
path = "src/main.rs"
